# tdx-chronos

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.md  vendoring.ini
cron/: daily_incr.sh  daily_sync.sh  weekly_doctor.sh  weekly_sync.sh
data/research/: type_samples.csv
docs/: CONTRIBUTING.md
docs/plans/: 2026-07-05-sprint5-cron-design.md  2026-07-05-sprint5-cron.md  2026-07-05-sprint6-type-semantics-design.md  2026-07-05-sprint6-type-semantics.md  2026-07-05-sprint7-uncategorized-types-design.md  2026-07-05-sprint7-uncategorized-types.md  2026-07-05-sprint8-financial-domain-design.md  2026-07-05-sprint8-financial-domain.md  2026-07-05-sprint9-doctor-financial-extension-design.md  2026-07-05-sprint9-doctor-financial-extension.md  2026-07-07-query-facade-design.md  2026-07-07-query-facade.md  2026-07-08-sprint11-incremental.md  2026-07-08-sprint12-client-bugfix-design.md  2026-07-08-sprint12-client-bugfix.md  2026-07-08-stale-shm-recovery.md
logs/: sprint0-report.md  sprint1-report.md  sprint10-report.md  sprint11-report.md  sprint12-report.md  sprint13-report.md  sprint2-report.md  sprint3a-report.md  sprint4a-report.md  sprint4b-report.md  sprint5-report.md  sprint6-report.md  sprint7-report.md  sprint8-report.md  sprint9-report.md
scripts/: bench_parquet_compression.py  query.py  sample_uncategorized_types.py  sample_unknown_fields.py
src/tdx_chronos/: __init__.py  alertor.py  client.py  doctor.py  preflight.py  retention.py
tests/integration/: __init__.py  test_client_integration.py
tests/unit/: test_alertor.py  (+22 more)
(+23 files in other folders)
